--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -141,12 +141,14 @@ body
         background-color: pink
         color: #fff
   .btn.submit
+    position: relative
+    z-index: 999
     height: 45px
     line-height: 45px
     text-align: center
     width: 135px
     margin: 0 auto 50px auto
-    background-color: #898989
+    background-color: orange
     color: #fff
 
 #logo
@@ -858,7 +860,7 @@ body
       padding-bottom: 33px
 
 
-.addaddress-panel 
+.addaddress-panel
   .button-wrap
     padding: 40px 30px 0 30px
     clearfix()
@@ -1067,10 +1069,10 @@ body
       text-decoration: none
 
 
-.action-edit 
+.action-edit
   .button
     width: 90px
-    
+
 .action-add
   .remove-address
     display: none
