--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -86,7 +86,9 @@ block content
 
     .section.go-wash-section
       #go-wash.button 欧耶洗车啦
+  script(src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js")
   script.
+    window.wx && wx.config(!{JSON.stringify(wxconfig)});
     var services = !{JSON.stringify(services)};
   +facade("menu")
   +facade("home")
