--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -37,6 +37,9 @@ body
     position: fixed
     width: 100%
 
+a
+  color: #36b;
+
 .blank
   position: fixed
   background-color: deeporange
@@ -869,6 +872,8 @@ body
 #order
   background-image: none
   background-color: #fff
+  position: absolute
+  height: 100%
   padding-top: 20px
   .pic
     margin: 0 20px 10px
