--- a/public/jade/order.jade
+++ b/public/jade/order.jade
@@ -38,6 +38,8 @@ block content
     else if order.status == "doing"
       .button.done 完成
 
+  script(src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js")
   script.
+    window.wx && wx.config(!{JSON.stringify(wxconfig)});
     var order = !{JSON.stringify(order)}
   +facade('order')
