给neuron添加timestamp配置，统一更新静态资源版本

--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -17,7 +17,9 @@ html(id="#{id}")
     script(src="/neurons/config.js?t=#{config.start_time}")
     script.
         neuron.config({
-          path:"/neurons"
+          path:"/neurons",
+          cache: false,
+          timestamp: #{config.start_time}
         });
     link(href="/css/app.css?t=#{config.start_time}", rel="stylesheet")
     if config.service == "user"
