--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -88,7 +88,11 @@ block content
       #go-wash.button 欧耶洗车啦
   script(src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js")
   script.
-    window.wx && wx.config(!{JSON.stringify(wxconfig)});
+    var wxconfig = !{JSON.stringify(wxconfig)};
+    if(user.isTest){
+      wxconfig.debug = true
+    }
+    window.wx && wx.config(wxconfig);
     var services = !{JSON.stringify(services)};
   +facade("menu")
   +facade("home")
