上传车辆处添加文字 #81

--- a/public/pages/tpl/mixins.jade
+++ b/public/pages/tpl/mixins.jade
@@ -4,5 +4,8 @@ mixin upload
       .text
         .title 照片上传
         .desc 含号牌的车辆照片
+          br
+          | (非必须)
+
     .camera
       img(src="/img/upload.png")
