update month_package view

--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -61,7 +61,7 @@ html(id="#{id}")
               cars: !{JSON.stringify(user.cars||[])},
               phone: "#{user.phone}",
               promo: !{JSON.stringify(user.promo||[])},
-              credit: #{user.credit || 0},
+              credit: #{user.credit || 0}
             };
   body
     block content
