增加校验，添加日志

--- a/public/jade/month_package.jade
+++ b/public/jade/month_package.jade
@@ -63,7 +63,7 @@ block content
       .note 注：一地址一订单，其他地址请另行下单
 
     .section.go-wash-section
-      #go-wash.button 欧耶洗车啦
+      #go-wash.button 购买包月套餐
   script(src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js")
   script(src="/wechat-config.js")
   script.
